--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mapbox-gl-draw-oursides",
-  "version": "1.0.0",
+  "name": "mapbox-gl-draw-ourside",
+  "version": "2.0.0",
   "description": "A drawing component for Mapbox GL JS",
   "homepage": "https://github.com/mapbox/mapbox-gl-draw",
   "author": "mapbox",
